--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -201,11 +201,11 @@
     @include size(195px, 44px)
 
   .cancel
-    float: left
+    float: right
     border: 0
     display:block
     width: 100px
-    padding-left: 150px
+    padding-right: 10px
     text-align: right
     line-height: 45px
     
