--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -160,8 +160,8 @@
     width: 620px
     padding: 5px 0
     font-size: $input-font-size
-    height: $input-height + 5px
-    line-height: $input-height + 5px
+    height: $input-height - 10px
+    line-height: $input-height - 10px
     @include border-radius(8px)
     border: 1px solid $pink
     background: white
@@ -178,17 +178,17 @@
   .url_link input,
   .title_link input
     border: 0
-    height: $input-height
-    line-height: $input-height
+    height: $input-height - 10px
+    line-height: $input-height -10px
     font-size: $input-font-size
     width: 420px
 
   .text
-    height: 180px
+    height: 340px
 
   .text textarea
     border: 0
-    @include size(570px, 180px)
+    @include size(570px, 340px)
     font-size: $input-font-size
     line-height: 1.5
     padding-left: 20px
@@ -235,29 +235,35 @@
 
   .file_image,
   .url_image
-    .top
-      float: left
-      width: 590px
-      height: 24px
-      line-height: 12px
+    .img_left,
+    .img_right
+      width: 480px
+      overflow: hidden
       a
-        float: right
-        padding-top: 8px
-    .bottom
-      float: left
-      width: 590px
-      height: 24px
-      line-height: 24px
-      span
+        font-size: 12px
+        line-height: 45px
+      .desc
         color: #808080
+        background: none
         line-height: 24px
+        display: block
+        font-size: 12px
+    .img_left
+      float: left
+      padding-top: 5px
+      label
+        padding-left: 0
+
+    .img_right
+      width: 90px
+      float: right
 
   .file_image
     clear: both
     width: 600px
-    padding: 10px 0 10px 20px
+    padding: 5px 0 5px 20px
     font-size: 12px
-    height: 45px
+    height: 55px
     line-height: 35px
     -moz-border-radius: 8px
     -webkit-border-radius: 8px
@@ -266,6 +272,10 @@
     background: #fff
     margin-bottom: 30px
     overflow: hidden
+    .img_left
+      padding-top: 10px
+      .desc
+        padding-top: 5px
     a
       padding-right: 0
 
@@ -283,28 +293,34 @@
     background: #fff
     margin-bottom: 30px
     overflow: hidden
-    input
-      border: 0
-      height: 45px
-      line-height: 40px
-      font-size: 20px
-      width: 300px
-      color: #808080
-    .bottom span
-      background: none
-      color: #808080
-      font-size: 12px
-      line-height: 24px
-
-
-    span
-      display:  inline-block
-      width: 130px
-      background: url('/images/post_image_url.gif') no-repeat
-      cursor: pointer
-      line-height: 30px
-      margin-top: 9px
-      vertical-align: top
+    .url_uploader
+      border: 1px solid #dcdcdc
+      border-right: 0
+      margin: 0
+      padding: 0
+      -moz-border-radius: 15px
+      -webkit-border-radius: 15px
+      border-radius: 15px
+      display: inline-block
+      height: 30px
+      label
+        padding-left: 10px
+      input
+        border: 0
+        height: 28px
+        line-height: 28px
+        font-size: 20px
+        width: 230px
+        color: #808080
+   
+      .url_uploader_btn
+        @include hide_text
+        display:  inline-block
+        width: 130px
+        background: url('/images/post_image_url.gif') no-repeat
+        cursor: pointer
+        line-height: 30px
+        vertical-align: top
 
 
 .my_pages
