--- a/app/views/posts/_form_photo.html.haml
+++ b/app/views/posts/_form_photo.html.haml
@@ -7,7 +7,7 @@
     %a{ :href => (form_photo.nil? ? "#" : form_photo.image.url_for(:original)), :rel => 'lightbox', :target => "_blank" }<
       %img{ :name => "tar_img", :src => (form_photo.nil? ? "" : form_photo.image.url_for(:small)), :alt => '' }
   %div{ :class => "the_text" }<
-    = text_field_tag "photos[][desc]", form_photo.nil? ? "" : form_photo.desc
+    = text_field_tag "photos[][desc]", (form_photo.nil? ? "" : form_photo.desc), :alt => "给图片写点什么吧"
     - if form_photo.nil?
       %span{ :name => "tar_process", :style => "display:none" }<
         上传中...
