Fix repost_parent section

--- a/doc/templates/minimalism.mustache
+++ b/doc/templates/minimalism.mustache
@@ -188,7 +188,7 @@
         {{comments_count}} 回复<br />
       </a>
       {{#is_repost}}
-      转自{{#parent}}<a href="{{url}}">{{title}}</a>{{/parent}}
+      转自{{#repost_parent}}<a href="{{url}}">{{title}}</a>{{/repost_parent}}
       {{/is_repost}}
     </span>
     {{/create_date}}
