--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -7,7 +7,8 @@
 .new_page
   .page_name,
   .page_tag,
-  .page_url
+  .page_url,
+  .page_url_edit
     width: 600px
     padding: 5px 0 5px 20px
     font-size: 20px
@@ -46,9 +47,10 @@
       input
         width: 150px
       
-
-  .page_url input
-    text-align: right
+  .page_url,
+  .page_url_edit
+    input
+      text-align: right
 
   .submit_box
     input
