--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -10,7 +10,6 @@
 
   a
     font-size: 12px
-    text-decoration: none
     color: #36C
   .left
     float: left
@@ -85,7 +84,7 @@
     @include border-radius(8px)
     border: 0
     background: #fff
-    margin-bottom: 30px	
+    margin-bottom: 10px	
 
     .file
       font-size: 12px
@@ -285,17 +284,16 @@
       border-right: 0
       margin: 0
       padding: 0
-      @include border-radius(15px)
+      @include border-radius(12px)
       display: inline-block
       height: 30px
-      label
-        padding-left: 10px
       input
+        margin-left: 20px
         border: 0
         height: 28px
         line-height: 28px
         font-size: 20px
-        width: 230px
+        width: 280px
         color: #808080
    
       .url_uploader_btn
