--- a/app/views/posts/_form_video.html.haml
+++ b/app/views/posts/_form_video.html.haml
@@ -4,9 +4,8 @@
 - content_for :form do
   .option_text_top<
     &nbsp;
-  .title_text
-    = label_tag :url, "网址"
+  .title_text.video
     = text_field_tag :url, post.url, :alt => 'http://', 'data-widget' => 'overtext'
-  %span.slight
+  %span.video.slight
     支持优酷、酷6、土豆视频网站的视频播放页链接，其他网站视频请输入Flash地址或HTML代码 
   = content_for :content_area
