{minutes,seconds}_with_zero, doc update

--- a/doc/templates/readme.html
+++ b/doc/templates/readme.html
@@ -77,7 +77,7 @@
 
 <ul>
 <li>other_pages
-页面拥有者参与或关注的所有页面，用户主页面特有，其中字段见<a
+页面拥有者参与的所有页面，用户主页面特有，其中字段见<a
   href="#blog-section">Blog Section</a></li>
 <li>has_other_pages</li>页面拥有者是否参与或关注了其它页面，用户主页面特有
 <li>followings 页面拥有者所关注的页面，用户主页面特有，其中字段见<a href="#blog-section">Blog Section</a></li>
@@ -281,7 +281,9 @@ Section里使用</p>
 <li>24hour 24小时制</li>
 <li>24hour_with_zero 同上，用0补齐两位数</li>
 <li>minutes 分钟(0 - 59)</li>
+<li>minutes_with_zero 同上，用0补齐两位数</li>
 <li>seconds 秒钟(0 - 59)</li>
+<li>seconds_with_zero 同上，用0补齐两位数</li>
 <li>timestamp UNIX Epoch以来的秒数</li>
 </ul>
 
