--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -1,6 +1,6 @@
 
 - js 'post_display'
-%div[post]{:class => type, :data => {:widget => 'fixHover'}}
+%div[post]{:class => type}
   .content_head
     - if current_user and post.editable_by? current_user
       %a.remove{ :href => post_path(post), :title => '删除',
