--- a/app/views/posts/_post_full.html.haml
+++ b/app/views/posts/_post_full.html.haml
@@ -1,4 +1,4 @@
-.article.tar_post{ class: (article_class ||= "") }
+.article.tar_post{ class: (article_class ||= "") , :data => {:widget => 'fixHover'}}
   .avatar
     .image{style: "background:url(#{post.blog.icon.url_for(:medium)})"}<
       %a{href: blog_path(post.blog)}<
