--- a/doc/templates/readme.html
+++ b/doc/templates/readme.html
@@ -76,6 +76,8 @@
 <h4>Sections</h4>
 
 <ul>
+<li>is_primary
+如果页面是用户的主页面那么可以进入，有些section如other_pages，followings仅在主页面出现</li>
 <li>other_pages
 页面拥有者参与的所有页面，用户主页面特有，其中字段见<a
   href="#blog-section">Blog Section</a></li>
