--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -261,9 +261,14 @@
       .desc
         color: #808080
         background: none
-        line-height: 24px
+        line-height: 16px
         display: block
         font-size: 12px
+        a
+          line-height: 16px
+          color: #808080
+          text-decoration: underline
+        
     .img_left
       float: left
       padding-top: 5px
