--- a/app/views/tags/_tag_trend.html.haml
+++ b/app/views/tags/_tag_trend.html.haml
@@ -2,6 +2,9 @@
   .tag_name
     %a{href: tagged_path(tag.tag)}<
       = tag.tag.to 12
+    - if tag.new
+      %span.new<
+        new
   .activity
     - period().each do |n|
       - d = n.days.ago.strftime("%Y-%m-%d")
