--- a/app/views/tags/index.html.haml
+++ b/app/views/tags/index.html.haml
@@ -1,11 +1,11 @@
 - css 'tags'
 - js 'tags'
-- content_for :title, "探索_宽岛"
+- content_for :title, "标签墙_宽岛"
 
 - @site_layout = "site"
 
 .explore
-  %h1 探索
+  %h1 标签墙
   .tag_wall
     - @tag_posts.each do |tag, post|
       = render partial: "posts/post4tag", object: post, as: :post, locals: {tag: tag}
