Author and tags

--- a/public/stylesheets/post_display.sass
+++ b/public/stylesheets/post_display.sass
@@ -52,7 +52,7 @@
     margin-top: 12px
 
 .writer_name a
-  color: #888888
+  color: $blue
   font-size: 14px
 
 .update_time
@@ -367,6 +367,9 @@
 .article
   .writer_name
     @include single_line(50px)
+
+  .avatar
+    text-align: center
 
   .update_time
     font-size: 14px
