--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -2,6 +2,9 @@
 - js 'post_display'
 %div[post]{:class => type}
   .content_head
+    %span.writer_name<
+      %a{href: blog_path(post.author.primary_blog)}
+        = post.author.name + '：'
     - if current_user and post.editable_by? current_user
       %a.remove{ :href => post_path(post), :title => '删除',
         :data => { :doconfirm => "确定删除该条帖子吗?", :widget => "rest", :callback => "del", :md => "delete", :parent => "tar_post" }}<
@@ -24,16 +27,14 @@
   .content_body
     = render partial: sub_template, object: post
   .content_footer
-    - unless post.tags.nil?
+    - unless post.tags.blank?
       .tags<
+        标签：
         - post.tags.each do |tag|
           %a{ :href => tagged_path(tag) }<
             = "#{tag}"
             = ", " unless tag == post.tags.last
     .left<
-      %span.writer_name<
-        %a{href: blog_path(post.author.primary_blog)}
-          = post.author.name
       %span.update_time= post.created_at
     .right
       %a.reply{ :href => post_comments_path(post), :title => "评论", :data => { :tgt => "comments" } }<
