--- a/doc/raw_html/k201102.css
+++ b/doc/raw_html/k201102.css
@@ -2553,6 +2553,28 @@ margin-bottom:30px;
     background-color:#3366cc;
 }
 
+.header .dash_navigator .arrowdown{
+	color:#ffffff;
+	background-color:#3366cc;
+	padding:5px 10px;
+	text-decoration:none;
+	border-radius:8px;
+	-moz-border-radius:8px;
+    -webkit-border-radius:8px;
+}
+
+.header .dash_navigator .arrowdown span{
+	display:inline-block;
+	width:14px;
+	height:14px;
+	background:url('images/icons.gif') -100px -40px ;
+    position:relative;
+    top:5px;
+    _top:0px;
+    _zoom:1;
+    overflow:hidden;
+}
+
 
 
 .header .dash_navigator a span{
