--- a/app/views/layouts/_header_main.html.haml
+++ b/app/views/layouts/_header_main.html.haml
@@ -1,4 +1,16 @@
 .header
   %a.logo{href: fucking_root, title: "我的主页"}
-  .navigator
-    %a{href: fucking_root}回我的主页
+  .navigator<
+    %a.highlight{href: fucking_root}<
+      我的主页      
+    &nbsp;
+    %a.highlight{href: "#"}<
+      探索
+      %span
+        &nbsp;
+    &nbsp;
+    %a{href: "#"}<
+      我的账户
+      %span<
+        &nbsp;
+    &nbsp;
