--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -48,6 +48,27 @@ label
 .navigator
   margin-left: $logo-width
   text-align: right
+  font-size: 18px
+  line-height: 24px
+  padding-top: 10px
+  a
+    color: #36c
+    padding: 5px 10px
+    text-decoration: none
+    span
+      display: inline-block
+      width: 14px
+      height: 14px
+      background: url(/images/icons.gif) －80px -40px
+      position: relative
+      top: 5px
+      _top: 0px
+      _zoom: 1
+      overflow: hidden
+  .highlight
+    color: #fff
+    @include border-radius(8px)
+    background-color: #36c
 
 a.logo
   display: inline
