--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -59,7 +59,7 @@ label
       display: inline-block
       width: 14px
       height: 14px
-      background: url(/images/icons.gif) －80px -40px
+      background: url('/images/icons.gif') -80px -40px
       position: relative
       top: 5px
       _top: 0px
@@ -69,6 +69,8 @@ label
     color: #fff
     @include border-radius(8px)
     background-color: #36c
+    span
+      background: url('/images/icons.gif') -100px -40px
 
 a.logo
   display: inline
