--- a/app/views/comments/index_for_blog_page.html.haml
+++ b/app/views/comments/index_for_blog_page.html.haml
@@ -19,4 +19,4 @@
       .txt
         %input{ :type => "text", :name => "content", :onkeydown => "if(new Event(event).code==13){this.getParent('form').getElement('.c_submitter').getElement('input').click();return false;}" }
       .c_submitter
-        %input.c_submitter{ :type => "submit", :value => "回复", :data => { :tgt => "reply" } }
+        %input.c_submitter{ :type => "submit", :value => "评论", :data => { :tgt => "reply" } }
