header && alert box

--- a/app/views/layouts/account.html.haml
+++ b/app/views/layouts/account.html.haml
@@ -1,4 +1,5 @@
-- @header = @footer = "main"
+- @header = @footer = "common"
+- @nav_now = "account"
 - content_for :content, do
   = yield
   = render :partial => 'shared/footer'
