--- a/app/views/layouts/apply.html.haml
+++ b/app/views/layouts/apply.html.haml
@@ -1,4 +1,4 @@
-- @header = @footer = "main"
+- @header = @footer = "common"
 - content_for :content, do
   = yield
   = render :partial => 'shared/footer'
