--- a/app/views/layouts/common.html.haml
+++ b/app/views/layouts/common.html.haml
@@ -1,4 +1,4 @@
-- @header = @footer = "main"
+- @header = @footer = "common"
 - @site_layout ||= "site_middle_size"
 - content_for :content, do
   = yield
