--- a/app/views/tags/index.html.haml
+++ b/app/views/tags/index.html.haml
@@ -1,8 +1,8 @@
 - css 'tags'
 - js 'tags'
 - content_for :title, "标签墙_宽岛"
-
 - @site_layout = "site"
+- @nav_now = "discovery"
 
 .explore
   %h1 标签墙
