--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -51,6 +51,7 @@ label
   font-size: 18px
   line-height: 24px
   padding-top: 10px
+  font-family: "Hiragino Sans GB,hei,microsoft yahei"
   a
     color: #36c
     padding: 5px 10px
@@ -71,6 +72,42 @@ label
     background-color: #36c
     span
       background: url('/images/icons.gif') -100px -40px
+  .menu
+    z-index: 9999
+    background-color: #ffffff
+    border: 3px solid #3366cc
+    display: inline
+    font-size: 18px
+    line-height: 24px
+    padding: 0px 5px
+    border-radius: 8px
+    -moz-border-radius: 8px
+    -webkit-border-radius: 8px
+    overflow: hidden
+    text-align: left
+    position: absolute
+    margin-left: -2px
+    margin-top: -6px
+    div
+      border-top: 1px solid #eaeaea
+      margin-top: -1px
+      padding: 4px
+      height: 24px
+      color: #3366cc
+      span
+        display: inline-block
+        width: 14px
+        height: 14px
+        background: url('/images/icons.gif') -120px -40px
+        position: relative
+        top: 5px
+        _top: 0px
+        _zoom: 1
+        overflow: hidden
+      a       
+        font-size: 14px
+        text-decoration: none
+        padding: 0
 
 a.logo
   display: inline
@@ -202,3 +239,33 @@ a.logo
     &:hover
       background-color: #528ef2
       color: white
+
+.k_box
+  border: 8px solid #548ff4
+  @include border-radius(21px)
+  background: white
+  position: absolute
+  .k_box_top
+    height: 24px
+    .k_box_close
+      width: 14px
+      height: 14px
+      margin: 8px 8px 0 0
+      float: right
+      background: url('/images/icons.gif') -100px -20px
+      overflow: hidden
+      cursor: pointer
+  .k_box_inner
+    .k_box_msg
+
+.box_invite
+  padding: 15px 25px
+  div
+    font-size: 18px
+  input
+    @include border-radius(8px)
+    padding-left: 5px
+    width: 360px
+    height: 32px
+    border: 1px solid #CADBEA
+    font-size: 12px
